# simple_http_server

./: .gitignore  CMakeLists.txt  Readme.md
cmake/: 3rdparty.cmake
source/: CMakeLists.txt  auth_gater.hpp  error.cpp  error.hpp  http_server.cpp  http_server.hpp  http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  main.cpp  request_handler.hpp  settings.cpp
source/error/: error.hpp  http_error.hpp
source/utils/: algorithm.hpp  files_prepare.cpp  run_io_context.hpp
tests/: CMakeLists.txt  handle_response.hpp  http_client.cpp  http_client.hpp  http_session.cpp  http_session.hpp  main.cpp  stream_crc32.cpp
tests/utils/: file_generators.cpp  filepaths.cpp  filepaths.hpp  handle_response.ipp  handle_response_policy.hpp
